--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ url: "https://mik-a-ela.github.io"
 markdown: kramdown
 highlighter: rouge
 
-# Permalink - 간단한 형식으로 변경
-permalink: pretty
+# Permalink
+permalink: /:categories/:title/
 
 # Default values for posts
 defaults:
