Update navigation menu: Add Project to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -36,3 +36,6 @@ navigation:
   - title: Log
     url: /log/
     description: Trial & Error
+  - title: Project
+    url: /project/
+    description: Side Project
